Fixed: make sure long lines inside literal tag do not overflow the literal area

--- a/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
+++ b/extension/ezoe/design/standard/stylesheets/skins/o2k7/content.css
@@ -98,6 +98,7 @@ pre
   color: #000;
   margin: 8px;
   font-size: 1.1em;
+  white-space: pre-line;
 }
 
 /* general block tags (embed and custom) */
